trunk (2009-09-15)
==================

  - CONNEXIONSSRV-12: Create initial egg structure [jlaplace]